--- a/Application/app/templates/index.html
+++ b/Application/app/templates/index.html
@@ -1,43 +1,34 @@
-{% extends "layout.html" %}
+<div class="col-sm-4">
+  <meta charset="utf-8">
+  <div id="blk-login">
+    <div class="warning">
 
-{% block content %}
-{% load staticfiles %}
-<div class="main-container">
-    <div class="cloud-image">
-        <img src="{% static "app/img/successCloudNew.svg" %}" />
-    </div>
-    <div class="content">
-        <div class="tweet-container">
-            <a href="http://twitter.com/intent/tweet/?text=I%20just%20created%20a%20new%20Python%20Django%20website%20on%20Azure%20using%20Github%20Actions&hashtags=GithubActions%20%40Azure">
-                <img src="{% static "app/img/tweetThis.svg" %}" />
-            </a>            
-        </div>
-        <div class="content-body">
-            <div class="success-text">Success!</div>
-            <div class="description line-1"> GitHub workflow has been successfully setup</div>
-            <div class="description line-2"> Your Python Django app is up and running on Azure</div>
-        </div>
-    </div>
+    </div><!-- .warning -->
+    <h3>
+      <span id="Label3">推薦者登入 Login</span>
+    </h3><!-- .form-group -->
+    <div class="form-group">
+
+
+    </div><!-- .form-group -->
+    <div class="form-group">
+
+
+    </div><!-- .form-group -->
+    <div class="btns">
+
+      <input type="button" id="Button1" value="NID登入"
+        onclick="javascript:window.open('http://opendata.fcu.edu.tw/fcuOauth/Auth.aspx?client_id=637102957247.e9976f5b722a47a6af9beddfeadb70e4.recommend.lib.fcu.edu.tw&amp;client_url=http://recommend.lib.fcu.edu.tw/weblink/scripts/weblink/oauth.aspx', '_top', 'copyhistory=0');"
+        class="btn btn-default">
+      
+    </div><!-- .btns -->
+    <div class="help">
+      <h4>如何登錄系統</h4>
+      <ul>
+        <li>帳號：請輸入教職員/學生證號。</li>
+        <li>密碼：請輸入NID密碼。(忘記密碼請聯絡資訊處分機2712)</li>
+        <li>薦購服務相關問題請洽圖書館讀者服務組2682。</li>
+      </ul>
+    </div><!-- .help -->
+  </div><!-- #blk-login -->
 </div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Get started right away </h2>
-        <p>
-            Clone your code repository and start developing your application on IDE of your choice
-        </p>
-        <p><a class="btn btn-default" href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/cloning-a-repository">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Continuous Delivery</h2>
-        <p>Learn more about all you can do with Github Actions by visiting the documentation</p>
-        <p><a class="btn btn-default" href="https://docs.github.com/en/actions">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Github Repository</h2>
-        <p>Learn more about all you can do with Github by visiting the documentation</p>
-        <p><a class="btn btn-default" href="https://docs.github.com">Learn more &raquo;</a></p>
-    </div>
-</div>
-
-{% endblock %}
